--- a/package.json
+++ b/package.json
@@ -5,16 +5,27 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.5",
     "@emotion/css": "^11.1.3",
+    "@google-cloud/storage": "^5.8.1",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
     "next": "^10.0.6",
     "next-images": "^1.7.0",
     "next-videos": "1.4.0",
+    "pg": "^8.5.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "typeorm": "^0.2.31",
+    "xss": "^1.0.8"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
+    "jest": "^26.6.3"
   }
 }
