--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@google-cloud/storage": "^5.8.1",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
+    "body-parser": "^1.19.0",
+    "multer": "^1.4.2",
     "next": "^10.0.6",
+    "next-connect": "^0.10.0",
     "next-images": "^1.7.0",
     "next-videos": "1.4.0",
     "pg": "^8.5.1",
