--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "joshb-minecraft",
+  "name": "demo-auth-mailer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "test": "jest"
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.13.8",
+    "cross-env": "^7.0.3",
     "jest": "^26.6.3"
   }
 }
