--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
     "body-parser": "^1.19.0",
+    "crypto-js": "^4.0.0",
     "multer": "^1.4.2",
     "next": "^10.0.6",
     "next-connect": "^0.10.0",
     "next-images": "^1.7.0",
+    "next-iron-session": "^4.1.12",
     "next-videos": "1.4.0",
     "pg": "^8.5.1",
+    "pg-format": "^1.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "typeorm": "^0.2.31",
