--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-plugin-styled-components": "^1.12.0",
     "body-parser": "^1.19.0",
     "crypto-js": "^4.0.0",
+    "dotenv": "^8.2.0",
+    "dotenv-flow": "^3.2.0",
     "multer": "^1.4.2",
     "next": "^10.0.6",
     "next-connect": "^0.10.0",
@@ -33,6 +35,7 @@
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.13.8",
     "cross-env": "^7.0.3",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "jest-config": "^26.6.3"
   }
 }
