--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "next-videos": "1.4.0",
     "pg": "^8.5.1",
     "pg-format": "^1.0.4",
+    "quill": "^1.3.7",
+    "quill-magic-url": "^3.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-quilljs": "^1.2.14",
     "typeorm": "^0.2.31",
     "xss": "^1.0.8"
   },
