--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "dotenv-flow": "^3.2.0",
+    "isomorphic-unfetch": "^3.1.0",
     "multer": "^1.4.2",
     "next": "^10.0.6",
     "next-connect": "^0.10.0",
