--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "body-parser": "^1.19.0",
     "crypto-js": "^4.0.0",
+    "date-fns": "^2.19.0",
     "dotenv": "^8.2.0",
     "dotenv-flow": "^3.2.0",
     "isomorphic-unfetch": "^3.1.0",
@@ -34,6 +35,7 @@
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
     "react-quilljs": "^1.2.14",
+    "react-spinners": "^0.10.6",
     "typeorm": "^0.2.31",
     "uuid": "^8.3.2",
     "xss": "^1.0.8"
