--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.19.0",
     "dotenv": "^8.2.0",
     "dotenv-flow": "^3.2.0",
+    "hamburger-react": "^2.4.0",
     "isomorphic-unfetch": "^3.1.0",
     "multer": "^1.4.2",
     "next": "^10.0.6",
@@ -36,8 +37,12 @@
     "react-icons": "^4.2.0",
     "react-quilljs": "^1.2.14",
     "react-spinners": "^0.10.6",
+    "react-spring": "^9.1.2",
+    "react-window": "^1.8.6",
+    "three": "0.119.0",
     "typeorm": "^0.2.31",
     "uuid": "^8.3.2",
+    "vanta": "^0.5.21",
     "xss": "^1.0.8"
   },
   "devDependencies": {
